--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 			<div class="portfolio">
 				<div class="container">
 					<div class="portfolio__row">
-						<div class="portfolio__img">
+						<div class="portfolio__img__first">
 							<img src="images/cup-of-coffee.jpeg" alt="">
 						</div>
 						<div class="portfolio__info">
@@ -131,6 +131,9 @@
 									</ul> 
 								</p>
 							</div>
+						</div>
+						<div class="portfolio__img__second">
+							<img src="images/cup-of-coffee.jpeg" alt="">
 						</div>
 					</div>
 				</div>
