--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 							</div>
 							<div class="skills__text">
 								I have experience with VCS such as GitHub and BitBucket. 
-								I know what commit and pull request are and so on
+								I know what commit and pull request are and so on.
 							</div>
 						</div>
 						<div class="skills__skill.last">
@@ -125,9 +125,10 @@
 									Here is a list of interesting projects in which I took part:
 									<ul>
 										<li class="portfolio__item">🞄 REST server for the medical foundation for the hackathon;</li>
+										<li class="portfolio__item">🞄 framework for federated learning in java;</li>
 										<li class="portfolio__item">🞄 server for abstract pizzeria "No-cheese pizza";</li>
 										<li class="portfolio__item">🞄 implementation of the game "Game of Life";</li>
-										<li class="portfolio__item">🞄 application that compresses images (image pixelator).</li>
+										<li class="portfolio__item">🞄 implementation of the encryption algorithm md5.</li>
 									</ul> 
 								</p>
 							</div>
